# mux-videos-xblock

./: MANIFEST.in  README.rst  setup.cfg
muxxblock/: xblock.py
muxxblock/static/css/: muxxblock.css
muxxblock/static/html/: muxxblock.html
muxxblock/static/js/src/: muxxblock.js
