[metadata]
name = mux-xblock
version = 0.0.1
description = Mux.com XBlock
long_description = file: README.rst
author = Strata
author_email = hello@strata.co.jp
url = https://github.com/strata-kk/mux-videos-xblock
license = GNU Affero General Public License v3
license_file = LICENSE.txt
classifiers =
    Framework :: Django
    License :: OSI Approved :: GNU Affero General Public License v3
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8

[options]
packages = muxxblock
zip_safe = True
include_package_data = True
install_requires =
    lti-consumer-xblock

[options.entry_points]
xblock.v1 =
    mux = muxxblock.xblock:MuxXBlock
